fixed a bug where the theme switcher box would be empty for browsers not set to prefer dark mode

--- a/assets/styles/common.css
+++ b/assets/styles/common.css
@@ -233,3 +233,7 @@ li {
   height: 100%;
   display: none;
 }
+
+#themeSwitcherSun {
+  display: block;
+}
